{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 158,
  "lineage": "3bc70144-53dd-970c-b9df-364109c0c3b0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:356021292573:internet-gateway/igw-0559f99011b96d87b",
            "id": "igw-0559f99011b96d87b",
            "owner_id": "356021292573",
            "tags": {
              "Environment": "dev",
              "Name": "ledger-igw-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ledger-igw-dev"
            },
            "vpc_id": "vpc-0de0d8266cbc3ee6e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:356021292573:route-table/rtb-0a0b91832fdc1633f",
            "id": "rtb-0a0b91832fdc1633f",
            "owner_id": "356021292573",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0559f99011b96d87b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "ledger-private-route-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ledger-private-route-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de0d8266cbc3ee6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060ea465d1609133a",
            "route_table_id": "rtb-0a0b91832fdc1633f",
            "subnet_id": "subnet-00d8af7f0b7b4306d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf575e946485a7cf",
            "route_table_id": "rtb-0a0b91832fdc1633f",
            "subnet_id": "subnet-0144ef7bf15a73e7d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:356021292573:security-group/sg-0e7d8473c96de8d4f",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7d8473c96de8d4f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ledger-db-sg-dev",
            "name_prefix": "",
            "owner_id": "356021292573",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ledger-db-sg-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ledger-db-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de0d8266cbc3ee6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:356021292573:security-group/sg-0ca41190677eb691e",
            "description": "Security group for Lambda to connect to RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca41190677eb691e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e7d8473c96de8d4f"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ledger-lambda-sg-dev",
            "name_prefix": "",
            "owner_id": "356021292573",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ledger-lambda-sg-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ledger-lambda-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de0d8266cbc3ee6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:356021292573:subnet/subnet-00d8af7f0b7b4306d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d8af7f0b7b4306d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "356021292573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ledger-private-subnet-0-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ledger-private-subnet-0-dev"
            },
            "vpc_id": "vpc-0de0d8266cbc3ee6e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:356021292573:subnet/subnet-0144ef7bf15a73e7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0144ef7bf15a73e7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "356021292573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ledger-private-subnet-1-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ledger-private-subnet-1-dev"
            },
            "vpc_id": "vpc-0de0d8266cbc3ee6e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:356021292573:vpc/vpc-0de0d8266cbc3ee6e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0af04a2b2a1d2bd32",
            "default_route_table_id": "rtb-0bc46c33d1ecd1f80",
            "default_security_group_id": "sg-06c15c42db65c31aa",
            "dhcp_options_id": "dopt-05b9e81bef79be551",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0de0d8266cbc3ee6e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bc46c33d1ecd1f80",
            "owner_id": "356021292573",
            "tags": {
              "Environment": "dev",
              "Name": "ledger-vpc-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ledger-vpc-dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}